[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "payments-server"
path = "src/server.rs"

[dependencies]
uuid = { version = "1.5.0", features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
	"serde",
] }


serde_json = "1.0"
serde = { version = "1.0.189", features = [
	"std",
	"derive",
	"rc",
	"serde_derive",
] }
blake2 = "0.10.6"
hex-literal = "0.4.1"
mongodb = "2.7.0"
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost-types = "0.12.1"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
